--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -15,11 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup = ('I',)"
    ]
   },
   {
@@ -33,11 +34,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I',)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print (tup)\n",
+    "type (tup)"
    ]
   },
   {
@@ -55,13 +77,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+      "('I',)\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "\n",
-    "# Your explanation here\n"
+    "new_elements= \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\",\n",
+    "new_tup= tup + new_elements \n",
+    "print (new_tup)\n",
+    "print (tup)\n",
+    "# Your explanation here\n",
+    "# The tuples are immutable. Therefore, if we want append new elements to a tuple, we need to create a new variable.\n"
    ]
   },
   {
@@ -79,12 +114,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "\n",
+    "tup=new_tup\n",
+    "print(tup)\n",
     "# Your explanation here\n"
    ]
   },
@@ -103,11 +147,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n') ('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup1=tup[:4]\n",
+    "tup2= tup[-4:]\n",
+    "print (tup1, tup2)"
    ]
   },
   {
@@ -121,11 +176,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3=tup1 + tup2\n",
+    "print(tup3)\n",
+    "type (tup3)"
    ]
   },
   {
@@ -137,11 +213,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "len (tup1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len (tup2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len (tup1+tup2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len (tup3)"
    ]
   },
   {
@@ -153,11 +301,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3.index(\"h\")"
    ]
   },
   {
@@ -177,11 +337,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "for letter in letters:\n",
+    "    if letter in tup3:\n",
+    "        print (\"True\")\n",
+    "    else:\n",
+    "        print (\"False\")"
    ]
   },
   {
@@ -195,17 +373,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of occurrences of each letter in tup3:\n",
+      "'a': 1 times\n",
+      "'b': 0 times\n",
+      "'c': 1 times\n",
+      "'d': 0 times\n",
+      "'e': 0 times\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "number_letter_tup3={}\n",
+    "for letter in letters:\n",
+    "    count = tup3.count(letter)\n",
+    "    number_letter_tup3[letter] = count\n",
+    "\n",
+    "print(\"Number of occurrences of each letter in tup3:\")\n",
+    "for letter, count in number_letter_tup3.items():\n",
+    "    print(f\"'{letter}': {count} times\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -219,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
